--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,8 @@ jobs:
       - 
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
-          tags: python-helloworld:latest
+          tags: camilo206/python-helloworld:latest
           platforms: linux/amd64,linux/arm64
     
